Adds .gitignore and initial compiled files.

--- a/style.css
+++ b/style.css
@@ -9,3 +9,5 @@ Text Domain:        starter
 License:            MIT License
 License URI:        http://opensource.org/licenses/MIT
 */
+body {
+  background: red; }
