Adds a whole bunch of new stylesheets.

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -14,3 +14,15 @@ License URI:        http://opensource.org/licenses/MIT
 
 @import '../../node_modules/bootstrap/less/bootstrap.less';
 @import 'theme';
+@import 'variables-and-mixins';
+@import 'header';
+@import 'index';
+@import 'front-page';
+@import 'default-page';
+@import 'full-width-page';
+@import 'single';
+@import 'sidebar';
+@import 'footer';
+//@import 'archive';
+//@import '404';
+//@import 'search';
